assets/css/style.css
*{
  font-size: 20px;
  font-family: Arial, Helvetica, sans-serif;
  margin: 5px 0px;
}

h1{
  font-size: 35px;
}

.header{
  display: flex;
  justify-content: space-between;
  padding: 10px 30px;
}

#view-high-score{
  color:rgb(206, 15, 206) ;
  background-color: white;
}

.header div{
  margin: auto 0px;

}

.header div p {
 display: inline;
 align-content: center;
}

main , footer{
  width: 60%;
  margin: 60px auto;
  text-align: center;
}

main h1{
  margin-bottom: 30px;
}

main p{
  margin-bottom: 40px;
}

ul{
  list-style: none;
  padding: 0px;
  margin:  0px;
}

button{
  width:  fit-content;
  height: fit-content;
  border-radius: 10px;
  border-width: 0px;
  background-color:rgb(50, 5, 80);
  color: aliceblue;
  margin: 5px 10px;
  padding: 10px 20px;
}

ul li button{
  width:  300px;
  margin: 5px 0px;
}

button:hover{
  background-color:rgb(201, 32, 187);
  cursor: pointer;
  cursor: hand;
}

button:focus{
  outline: none;
} 

input{
  height: 35px;
  width:  300px;
}

.answer{
  border-top: solid;
  border-top-width: thin;
  padding-top: 10px;
  font-size: 40px;
  color: grey;
  visibility: hidden;
}

.text-align
{
  text-align: left;
}

.text-center-align
{
  text-align: center;
}

@media screen and (max-width: 575px) {


  main , footer{
    width: 90%;
    margin: 50px auto;
    text-align: center;
  }

  button{
    width: 100%;
    margin: 5px 0px;
    padding: 10px 0px;
  }

  ul li button{
    text-align: center;
  }

  .text-align
  {
    text-align: center;
  }

  input{
    margin: 10px 0px;
  }

  button:hover{
    background-color:rgb(50, 5, 80);
    cursor: pointer;
    cursor: hand;
  }

}

